# accounting

./: .gitignore  Accounting_Template.xlsx  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
accounting/: generate_reports.py  operate_on_data.py  read_data.py  store_data.py
