[metadata]
name = accounting
version = 0.1
description = A package for managing home expenses and generate financial reports.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True